--- a/room.html
+++ b/room.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
     <head>
         <title>Rocket.Q - Perguntas e Respostas</title>
-        <meta charset = "UTF-8">
-        <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <!-- View Port -->
-        <meta name = "viewport" content = "width-devide-width, initial-scale = 1.0">
+        <meta name="viewport" content="width-devide-width, initial-scale=1.0">
 
         <!-- CSS -->
-        <link rel = "stylesheet" href = "styles/global.css">
-        <link rel = "stylesheet" href = "styles/room.css">
+        <link rel="stylesheet" href="styles/global.css">
+        <link rel="stylesheet" href="styles/room.css">
 
         <!-- Fontes -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,13 +17,23 @@
     </head>
 
     <body>
-        <div id = "room" class = "content">
+        <div id="room" class="content">
             <header>
-                <img src = "assets/logo.svg" alt = "Rocket.Q Logo" />
+                <a href="#">
+                    <img src="assets/logo.svg" alt="Rocket.Q Logo" />
+                </a>
+
+                <div class="buttons">
+                    <div class="button outlined">
+                        #3233243
+                        <img src="assets/copy.svg" alt="Copiar número da sala"/>
+                    </div>
+                    <a href="" class="button">
+                        <img src="assets/users-white.svg" alt="Criar uma sala"/>
+                        Criar Sala
+                    </a>
+                </div>
             </header>
         </div>
     </body>
 </html>
-
-
-<!-- pause on 39:04 -->
