--- a/room.html
+++ b/room.html
@@ -10,6 +10,8 @@
         <!-- CSS -->
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/room.css">
+        <link rel="stylesheet" href="styles/modal.css">
+
 
         <!-- Fontes -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -57,7 +59,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="Avatar">
+                                <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
@@ -74,8 +76,86 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é JavaScript?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a href="#" class="check">
+                                <img src="assets/check.svg" alt="Marcar como lida">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, nostrum iste! Accusamus quibusdam blanditiis, esse, laborum possimus eligendi dolorem suscipit autem placeat in odio iste magni veritatis doloribus repellendus quisquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, quisquam repudiandae. Eligendi consectetur nostrum rerum aliquam delectus similique minima dolorum nesciunt exercitationem numquam adipisci ipsum est corporis quaerat, atque cum!</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a href="#" class="check">
+                                <img src="assets/check.svg" alt="Marcar como lida">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper read">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é TypeScript?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
                 </section>
             </main>
         </div>
+
+        <!-- Modal -->
+        <div class="modal-wrapper">
+            <div class="modal">
+                <h2>Excluir pergunta</h2>
+                <p>Tem certeza que você deseja excluir esta pergunta?</p>
+
+                <form action="#">
+                    <label class="sr-only" for-id="password">Digite sua senha admin</label>
+                    <input type="password" name="password" id="passwrod" placeholder="Digite sua senha">
+
+                    <div class="buttons">
+                        <div class="button grey">Cancelar</div>
+                        <button class="red">Sim, excluir</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
     </body>
 </html>
